Main: trending news-html/css working

--- a/dailyNews/Starter/index.html
+++ b/dailyNews/Starter/index.html
@@ -112,7 +112,7 @@
                     <span class="article-category">Technology</span>
 
                     <div class="article-data-container">
-                        <div>
+                        <div class="article-data">
                             <span>Dec 5th 2021</span>
                             <span class="article-data-spacer"></span>
                             <span>8 min red</span>
@@ -127,7 +127,7 @@
                     <span class="article-category">Technology</span>
 
                     <div class="article-data-container">
-                        <div>
+                        <div class="article-data">
                             <span>Dec 5th 2021</span>
                             <span class="article-data-spacer"></span>
                             <span>8 min red</span>
@@ -142,13 +142,100 @@
                     <span class="article-category">Technology</span>
 
                     <div class="article-data-container">
-                        <div>
+                        <div class="article-data">
                             <span>Dec 5th 2021</span>
                             <span class="article-data-spacer"></span>
                             <span>8 min red</span>
                         </div>
 
                         <h3 class="title article-title">Is VR the future?</h3>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Sidebar -->
+            <div class="sidebar d-grid">
+
+                <h3 class="title featured-content-title">Trending News</h3>
+
+                <a href="#" class="trending-news-box">
+                    <div class="trending-news-image-box">
+                        <span class="trending-number place-items-center">01</span>
+                        <img src="./assets/images/trending/adi-goldstein-EUsVwEOsblE-unsplash.jpg" alt="" class="article-image">
+                    </div>
+
+                    <div class="trending-news-data">
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red</span>
+                        </div>
+
+                        <h3 class="title article-title">Sample article title</h3>
+                    </div>
+                </a>
+                <a href="#" class="trending-news-box">
+                    <div class="trending-news-image-box">
+                        <span class="trending-number place-items-center">02</span>
+                        <img src="./assets/images/trending/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="" class="article-image">
+                    </div>
+
+                    <div class="trending-news-data">
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red</span>
+                        </div>
+
+                        <h3 class="title article-title">Sample article title</h3>
+                    </div>
+                </a>
+                <a href="#" class="trending-news-box">
+                    <div class="trending-news-image-box">
+                        <span class="trending-number place-items-center">03</span>
+                        <img src="./assets/images/trending/alex-kotliarskyi-QBpZGqEMsKg-unsplash.jpg" alt="" class="article-image">
+                    </div>
+
+                    <div class="trending-news-data">
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red</span>
+                        </div>
+
+                        <h3 class="title article-title">Sample article title</h3>
+                    </div>
+                </a>
+                <a href="#" class="trending-news-box">
+                    <div class="trending-news-image-box">
+                        <span class="trending-number place-items-center">04</span>
+                        <img src="./assets/images/trending/domenico-loia-hGV2TfOh0ns-unsplash.jpg" alt="" class="article-image">
+                    </div>
+
+                    <div class="trending-news-data">
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red</span>
+                        </div>
+
+                        <h3 class="title article-title">Sample article title</h3>
+                    </div>
+                </a>
+                <a href="#" class="trending-news-box">
+                    <div class="trending-news-image-box">
+                        <span class="trending-number place-items-center">05</span>
+                        <img src="./assets/images/trending/luca-bravo-XJXWbfSo2f0-unsplash.jpg" alt="" class="article-image">
+                    </div>
+
+                    <div class="trending-news-data">
+                        <div class="article-data">
+                            <span>Dec 5th 2021</span>
+                            <span class="article-data-spacer"></span>
+                            <span>8 min red</span>
+                        </div>
+
+                        <h3 class="title article-title">Sample article title</h3>
                     </div>
                 </a>
             </div>
