--- a/dailyNews/Starter/index.html
+++ b/dailyNews/Starter/index.html
@@ -465,6 +465,11 @@
                 </a>
 
             </div>
+
+            <div class="see-more-container">
+                <a href="#" class="btn see-more-btn place-items-center">See more <i class="ri-arrow-right-s-line"></i></a>
+            </div>
+
         </div>
     </section>
     <!-- Popular tags -->
